--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -33,11 +33,37 @@ body,
   height: 100%;
 }
 
+.input {
+  background-color: #2ecc71;
+  font-family: 'Roboto', sans-serif;
+  color: #fff;
+}
+
+.input-headline-container
+{
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+}
+
+.input-headline {
+  font-weight: 500;
+  font-size: 1.5em;
+}
+
 .preview {
-  background: red;
+  background: #fff;
+  padding: 25px;
+}
+
+.template-body
+{
+  height: 100%;
 }
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
 
 }
+
+@import "quote";
