Fetch image from Flickr

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -10,6 +10,8 @@
       </form>
       <button ng-click="main.quotePrev()">Previous line</button>
       <button ng-click="main.quoteNext()">Next line</button>
+
+      <button ng-click="main.changeImage()">Change image</button>
     </div>
     <div class="col-md-6 preview">
       <ng-include src="'views/templates/quote.html'" class="template-quote"></ng-include>
