Color picker for bg tint

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -93,6 +93,9 @@
               <input type="checkbox" ng-model="main.poster.showBorder"> Show border
             </label>
           </div>
+          <button class="btn btn-default" colorpicker="rgba" colorpicker-position="bottom" type="button" colorpicker-position="top" ng-model="main.poster.bgTint">
+              Change color & opacity
+          </button>
         </div>
         <div ng-switch-when="2">
           <h1 class="controls-headline">Save and share your card</h1>
