--- a/app/views/templates/quote.html
+++ b/app/views/templates/quote.html
@@ -1,7 +1,7 @@
 <div
   class="template-body quote-template-body"
   style="background-image: url('{{ main.poster.artistImageUrl }}')">
-  <div class="quote-tint">
+  <div class="quote-tint" style="background: {{main.poster.bgTint}};">
     <div class="quote-border" style="{{main.poster.showBorder ? 'border: 3px solid #fff;' : ''}}">
       <div class="quote-content">
         <h1 class="quote-content-quote" style="font-size: {{main.poster.fontSize}}em">
