--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,7 +23,7 @@ input[type=range] {
 input[type=range]::-webkit-slider-runnable-track {
     width: 300px;
     height: 5px;
-    background: #ddd;
+    background: #39ca74;
     border: none;
     border-radius: 3px;
 }
@@ -46,7 +46,7 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 input[type=range]::-moz-range-track {
     width: 300px;
     height: 5px;
-    background: #ddd;
+    background: #39ca74;
     border: none;
     border-radius: 3px;
 }
@@ -83,7 +83,7 @@ input[type=range]::-ms-fill-lower {
     border-radius: 10px;
 }
 input[type=range]::-ms-fill-upper {
-    background: #ddd;
+    background: #39ca74;
     border-radius: 10px;
 }
 input[type=range]::-ms-thumb {
@@ -100,7 +100,6 @@ input[type=range]:focus::-ms-fill-upper {
     background: #ccc;
 }
 //end of range
-
 
 
 
