--- a/app/views/templates/quote.html
+++ b/app/views/templates/quote.html
@@ -1,4 +1,5 @@
 <div
+  id="lol"
   class="template-body quote-template-body"
   style="background-image: url('{{ main.poster.artistImageUrl }}')">
   <div class="quote-tint" style="background: {{main.poster.bgTint}};">
