style fix for tab line breaks

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -208,11 +208,7 @@ body,
   opacity: 0.55;
   height: 100%;
   cursor: pointer;
-
-  span
-  {
-    line-height: 100px;
-  }
+  padding-top: 35px;
 
   &:hover
   {
