Remove fixed background

--- a/app/styles/_quote.scss
+++ b/app/styles/_quote.scss
@@ -1,5 +1,5 @@
 .quote-template-body {
-  background: no-repeat center center fixed;
+  background: no-repeat center center;
   background-size: cover;
   margin: 0;
   padding: 0;
