--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,14 +14,14 @@
           class="col-xs-4 walkthrough-btn"
           ng-click="main.step = main.STEP_CUSTOMIZE"
           ng-class="{'walkthrough-btn-active': main.step === main.STEP_CUSTOMIZE}">
-          <span><i class="fa fa-pencil fa-3x"></i></span>
+          <span><i class="fa-paint-brush fa-3x"></i></span>
           <p id="iconText">Customize</p>
         </div>
         <div
           class="col-xs-4 walkthrough-btn"
           ng-click="main.step = main.STEP_SAVE"
           ng-class="{'walkthrough-btn-active': main.step === main.STEP_SAVE}">
-          <span><i class="fa fa-pencil fa-3x"></i></span>
+          <span><i class="fa fa-share-alt fa-3x"></i></span>
           <p id="iconText">Save & Share</p>
         </div>
       </header>
