--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,7 +14,7 @@
           class="col-xs-4 walkthrough-btn"
           ng-click="main.step = main.STEP_CUSTOMIZE"
           ng-class="{'walkthrough-btn-active': main.step === main.STEP_CUSTOMIZE}">
-          <span><i class="fa-paint-brush fa-3x"></i></span>
+          <span><i class="fa fa-paint-brush fa-3x"></i></span>
           <p id="iconText">Customize</p>
         </div>
         <div
