--- a/app/styles/_quote.scss
+++ b/app/styles/_quote.scss
@@ -1,5 +1,5 @@
 .quote-template-body {
-  background: no-repeat center center fixed;
+  background: no-repeat center center;
   background-size: cover;
   margin: 0;
   padding: 0;
@@ -58,14 +58,12 @@
 
 .quote-content-quote {
   text-transform: uppercase;
-  font-family: 'Oswald', sans-serif;
   margin-bottom: 0;
 }
 
 .quote-content-name {
   font-size: 1.5em;
   text-transform: uppercase;
-  font-family: 'Oswald', sans-serif;
   font-weight: 300;
 }
 
